<resources>
    <string name="app_name">Easy Calc</string>
    <string name="text_first_number">Enter 1st number</string>
    <string name="text_second_number">Enter 2nd number</string>
    <string name="text_zero">0</string>
    <string name="text_plus">+</string>
    <string name="text_minus">-</string>
    <string name="text_clear">C</string>
    <string name="text_times">x</string>
    <string name="text_divide">/</string>
    <string name="text_exit">Exit</string>
    <string name="text_enter_valid_number">Please enter a valid number.</string>
</resources>
