<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    tools:context="tech.hyperdev.easycalc.activities.MainActivity">

    <EditText
        android:id="@+id/etFirstNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_first_number" />

    <EditText
        android:id="@+id/etSecondNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etFirstNumber"
        android:hint="@string/text_second_number" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/gridButtons"
        android:layout_alignRight="@+id/gridButtons"
        android:layout_below="@id/etSecondNumber"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="#5e5e5e"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/text_zero"
        android:textSize="@dimen/textSize" />

    <GridLayout
        android:id="@+id/gridButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvResult"
        android:layout_centerHorizontal="true"
        android:columnCount="3"
        android:rowCount="2">

        <Button
            style="@style/CalcButtonStyle"
            android:text="@string/text_plus" />

        <Button
            style="@style/CalcButtonStyle"
            android:text="@string/text_minus" />

        <Button
            style="@style/CalcButtonStyle"
            android:text="@string/text_clear" />

        <Button
            style="@style/CalcButtonStyle"
            android:text="@string/text_times" />

        <Button
            style="@style/CalcButtonStyle"
            android:text="@string/text_divide" />

        <Button
            style="@style/CalcButtonStyle"
            android:text="@string/text_exit" />
    </GridLayout>

</RelativeLayout>
